manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentence-encoder-bge-m3-service
spec:
  selector:
    app: sentence-encoder-bge-m3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
