manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentence-encoder-bge-m3-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sentence-encoder-bge-m3.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sentence-encoder-bge-m3-service
            port: 
              number: 80
